--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Darwin, Charles, 1809-1882'
 - !lcsh 'Evolution (Biology)'
 - !lcc 'QH'
+- GITenberg
 tableOfContents: The Darwinian hypothesis (1859) -- The Origin of species (1860) --
   Criticisms on "The origin of species" (1864) -- The genealogy of animals (1869)
   -- Mr. Darwin's critics (1871) -- Evolution in biology (1878) -- The coming of age
